# OpenCV

./: .gitignore  CMakeLists.txt  README.md
OpenCV/Example/: CMakeLists.txt
OpenCV/Example/part1/: 01.helloWorld.cpp  01_helloWorld.cpp  02.basicOp.cpp  03.MatOP.cpp  03_MatOP.cpp  04_inputArray.cpp  05_MatOp2.cpp  05_matOp2.cpp  06_video.cpp  CMakeLists.txt  colors.hpp
OpenCV/Example/part1/data/: frame.png:Zone.Identifier  mydata.xml  mydata.yml
OpenCV/Example/part2/: 09_videoSave.cpp  10_drawing.cpp  11_drawing_example.cpp  12_drawing_example2.cpp  13_font.cpp  15_Keyboard.cpp  16_tickmeter.cpp  17_mouse.cpp  18_mouse_example.cpp  19_trackbar.cpp  20_filestorage.cpp  21_filestorage2.cpp  22_mask.cpp  CMakeLists.txt
OpenCV/Example/part3/: 23_brightness.cpp  24_contrast.cpp  25_histogram.cpp  26_arithmetic.cpp  27_embossing.cpp  28_blurr.cpp  29_sharpening.cpp  30_bilateral.cpp  CMakeLists.txt
OpenCV/Example/part4/: 31_affine.cpp  32_perspecting.cpp  33_persepcting_example.cpp  34_persepcting_example02.cpp  35_sobel.cpp  36_canny.cpp  37_hougline.cpp  38_honglineP.cpp  39_color_split.cpp  40_inrange.cpp  41.inrange_example.cpp  42_threshold.cpp  43_morplogy.cpp  44_labeling.cpp  45_polygon.cpp  46.paper_posit.cpp  CMakeLists.txt
OpenCV/Example/part5/: 47_cascade.cpp  48_cascade_example.cpp  49_hog.cpp  50_QR.cpp  51_corner.cpp  52_orb.cpp  53_matching.cpp  CMakeLists.txt
OpenCV/Example/part6/: 54_knnplane.cpp  55_knndigit.cpp  56_handpose.cpp  CMakeLists.txt
OpenCV/Example/part6/classify/: CMakelists.txt  classify.cpp  모델파일다운로드방법.txt
OpenCV/Example/part6/classify/YOLOx/: CMakeLists.txt  Output-Skeleton.avi  demo.cpp
